--- a/appendix.html
+++ b/appendix.html
@@ -112,6 +112,94 @@
                 <h1>Dynamic time warping</h1>
                 <hr/>
                 <img src="/ada-2022-project-wetried/assets/images/full_dtw.png" alt="Image (input)" style="width: 100%;">
+
+                <h1>Time lagged cross correlation</h1>
+                <hr/>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_ja.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_it.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_da.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_tr.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_no.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_en.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_sr.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_sv.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_nl.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_de.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_fr.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_ca.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_ko.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_fi.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+                
             </article>
         </main>
     </div>
