--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <h2 id="heading2">World Map</h2>
                 <p>In this map, you can see the air pollution, the total number of Wikipedia views and the number of views for articles in the environment topic per day and studied country.</p> 
                 <p>You can click on a country to see its specific graph. Clicking again on the country return to the world view.</p>
-            
+                <p><kbd>Try to compare the evolution of the Wikipedia views with the evolution of the views for articles in the environment topic. You might find some surprising results.</kbd></p>
             </article>
         </main>
 
