--- a/index.html
+++ b/index.html
@@ -1578,6 +1578,7 @@
                     if (countryData) {
                         dataContext.airpol = countryData.airpol;
                         dataContext.envviews = countryData.envviews;
+                        dataContext.globalviews = countryData.globalviews;
                         valueAxis.min = undefined;
                         valueAxis.max = undefined;
                     }
