--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
                 <p>
                     Dynamic time warping (DTW) is a way to compare two usually temporal sequences that do not sync up perfectly. It is a method to calculate the optimal
                     matching between two sequences. It’s commonly used to measure the distance between two time-series. We will, for each language, apply this algorithm 
-                    between the environment-related views and all views for that language. Examples of results are below
+                    between the environment-related views and all views for that language. Examples of results are below, you can find the graph for every studied country 
+                    in the <a href="/ada-2022-project-wetried/appendix.html">appendix</a>.
                 </p>
 
                 <div style="display: flex; width: 100%; margin-left: auto; margin-right: auto;">
