--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
                 </p>
 
                 <p>
-                    Some outliers exist : Such a case here is German, for which an offset of 140 has a Pearson coefficient of 0.75, meaning that the wikipedia 
-                    views at time  almost “overlap” with the environment views at time .  Meanwhile, for most of the other languages (Serbian, Catalan, French, 
-                    Italian, Norwegian, ….), the offset that maximizes the cross correlation is 0. As such, we cannot really conclude much as the wikipedia views 
+                    Some outliers exist : such a case here is Germany, for which an offset of 140 has a Pearson coefficient of 0.75, meaning that the wikipedia 
+                    views at time  almost “overlap” with the environment views at time. Meanwhile, for most of the other languages (Serbian, Catalan, French, 
+                    Italian, Norwegian, ….), the offset that maximizes the cross correlation is 0. As such, we cannot really conclude much as the Wikipedia views 
                     and environment views behave very similarly, so any increase in the environment views appears to be due to just an increase in Wikipedia views 
                     in general. 
                 </p>
@@ -345,7 +345,7 @@
 
                 <p>
                     Here we can see that the ranking of the environment oscillates around 47 which is pretty low considering there are 64 topics, moreover 
-                    from January 2020 to July 2020 it drops to 51 showing that people's attention shifted away from the environment during covid.
+                    from January 2020 to July 2020 it drops to 51, showing that people's attention shifted away from the environment during covid.
                 </p>
 
                 <p>
