--- a/index.html
+++ b/index.html
@@ -399,7 +399,10 @@
                     Let’s have a look at the other dataset which we imported : we study the air pollution from the World Air Quality Index (WAQI), 
                     as this will prove to be a good marker of the results of policies about pollution. There is no access to pollution by country per se, 
                     but we do have the data per city. Therefore, we will assume that the pollution of a country can be proxied by the pollution of its 
-                    capital city. This is a good representative in most cases, as the capital city usually concentrates a decent portion of the activities 
+                    capital city.
+                </p> 
+                <p>
+                    This is a good representative in most cases, as the capital city usually concentrates a decent portion of the activities 
                     of the country. This has limitations too : for example, we picked Washington D.C as the representative to the U.S., but it clearly isn’t 
                     the place where most of the activities of the country happen. It clearly brings some extra variance in the computations, but we think it 
                     is the best way to deal with the situation. Keeping that in mind, let’s have a look at the air pollution per year in the considered cities.
