--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@
                 <p>
                     Time lagged cross correlation is meant to add to the above analysis; it studies the correlation between the two time series by shifting one 
                     of them positively or negatively in time, as to see if we can obtain one from the other that way. The closer the peak synchrony is to 0, the 
-                    more synchronous the time series are; the contrary is also true, and this is what we tried to look for. Two examples of outputs are below:
+                    more synchronous the time series are; the contrary is also true, and this is what we tried to look for. Two examples of outputs are below, you can find the graph for every studied country 
+                    in the <a href="/ada-2022-project-wetried/appendix.html">appendix</a>.
                 </p>
 
                 <p><img src="/ada-2022-project-wetried/assets/images/pearson_en.png" alt="Image (input)" 
